<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="?attr/background">

    <ImageView
        android:id="@+id/ivImageBlur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/ivImage"
        android:layout_marginBottom="0dp"
        tools:background="@android:color/darker_gray"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@android:color/darker_gray"
        android:elevation="1dp"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ivImage"
        android:layout_marginTop="-33dp"
        android:background="@drawable/shape_back_detail"
        android:paddingStart="17dp"
        android:paddingTop="50dp"
        android:paddingEnd="17dp"
        android:paddingBottom="37dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="?android:attr/textColor"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Title" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_marginTop="9dp">
            <TableRow>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_baseline_date"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="Release Data" />
            </TableRow>
            <TableRow>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_baseline_genre"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="Genre" />
            </TableRow>
            <TableRow>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_baseline_duration"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/tvDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="00:00" />
            </TableRow>
            <TableRow android:id="@+id/trNetwork" android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_baseline_network"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:id="@+id/ivNetwork"
                    android:layout_width="37dp"
                    android:layout_height="27dp"
                    tools:src="@color/black"
                    android:layout_gravity="left"
                    tools:ignore="ContentDescription,RtlHardcoded" />
            </TableRow>
        </TableLayout>

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/cpbUserScore"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/tableLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="9dp"

            app:cpb_background_progressbar_color="#19204529"
            app:cpb_background_progressbar_width="13dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="#35d07a"
            app:cpb_progressbar_width="7dp"
            app:cpb_round_border="true" />

        <TextView
            android:id="@+id/tvUserScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/cpbUserScore"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/cpbUserScore"
            android:text="@string/user_nscore"
            android:textAlignment="textEnd"
            android:textColor="#35d07a"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvKilasan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tableLayout"
            android:layout_marginTop="17dp"
            android:textColor="?android:attr/textColor"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="Descripion" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ivImage"
        android:layout_alignBottom="@+id/ivImageBlur"
        android:layout_marginEnd="-70dp"
        android:layout_marginBottom="3dp"
        android:src="@drawable/ic_favorite_border"
        app:backgroundTint="@color/base"
        app:tint="@color/tab_indi"
        tools:ignore="ContentDescription" />

</RelativeLayout>