<resources>
    <string name="app_name">Movieku</string>

    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="user_nscore">USER\nSCORE</string>
    <string name="photo">Photo</string>
    <string name="favorite">Favorite</string>
</resources>